Added headings and body
See subject line

--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
 	<header>
 	<nav id="header-nav" class="navbar navbar-default">
 		<div class="container">
-			<div class="navbar-header">
+			<div class="navbar header">
 				<span>Food, LLC</span>
 			</div>
 		</div>
 	</nav>
+	<h1>Our Menu</h1>
 </header>
+	<div	 class="container">
+		<h2>Chicken</h2>
+		<p>lorem ipsum crap</p>
+	</div>
+		<div	 class="container">
+		<h2>Beef</h2>
+		<p>lorem ipsum crap</p>
+	</div>
+		<div	 class="container">
+		<h2>Sushi</h2>
+		<p>lorem ipsum crap</p>
+	</div>
 </body>
 </html>
