--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 	<nav id="header-nav" class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar header">
-				<span>Food, LLC</span>
+				<h1>Food, LLC</h1>
 			</div>
 		</div>
 	</nav>
-	<h1>Our Menu</h1>
+	<h2>Our Menu</h2>
 </header>
-	<div	 class="container">
-		<h2>Chicken</h2>
+	<div	 id="box" class="container">
+		<h3>Chicken</h3>
 		<p>lorem ipsum crap</p>
 	</div>
-		<div	 class="container">
-		<h2>Beef</h2>
+		<div	 id="box" class="container">
+		<h3>Beef</h3>
 		<p>lorem ipsum crap</p>
 	</div>
-		<div	 class="container">
-		<h2>Sushi</h2>
+		<div	 id="box" class="container">
+		<h3>Sushi</h3>
 		<p>lorem ipsum crap</p>
 	</div>
 </body>
