--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 	</nav>
 	<h2>Our Menu</h2>
 </header>
-	<div	 id="box" class="container">
+	<div	 class="container" id="box">
 		<h3>Chicken</h3>
 		<p>lorem ipsum crap</p>
 	</div>
-		<div	 id="box" class="container">
+		<div	 class="container" id="box">
 		<h3>Beef</h3>
 		<p>lorem ipsum crap</p>
 	</div>
-		<div	 id="box" class="container">
+		<div	 class="container" id="box">
 		<h3>Sushi</h3>
 		<p>lorem ipsum crap</p>
 	</div>
