--- a/index.html
+++ b/index.html
@@ -9,27 +9,70 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<header>
-	<nav id="header-nav" class="navbar navbar-default">
-		<div class="container">
-			<div class="navbar header">
-				<h1>Food, LLC</h1>
-			</div>
-		</div>
-	</nav>
-	<h2>Our Menu</h2>
+<header>
+		<nav id="header-nav" class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar header">
+					<div class="navbar-brand">
+						<h1 class="text-left">Food, LLC</h1>
+					</div>
+					<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+           				<span class="sr-only">Toggle navigation</span>
+           				<span class="icon-bar"></span>
+          				<span class="icon-bar"></span>
+          				<span class="icon-bar"></span>
+					</button>
+				</div>
+			<div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <span class="visible-xs text-center">Chicken</span>
+            </li>
+            <li>
+              <span class="visible-xs text-center">Beef</span>
+            </li>
+            <li>
+              <span class="visible-xs text-center">Sushi</span>
+            </li>
+          </ul>
+        </div>
+		</nav>
 </header>
-	<div	 class="container" id="box">
-		<h3>Chicken</h3>
-		<p>lorem ipsum crap</p>
+<h2 class="text-center">Our Menu</h2>
+	<div class="container">
+		<div class="row">
+	<div class="col-md-12 col-sm-12 col-xs-12" id="item">
+		<h3 class="text-center">Chicken</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
-		<div	 class="container" id="box">
-		<h3>Beef</h3>
-		<p>lorem ipsum crap</p>
+		<div class="col-md-12 col-sm-12 col-xs-12" id="item">
+		<h3 class="text-center">Beef</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
-		<div	 class="container" id="box">
-		<h3>Sushi</h3>
-		<p>lorem ipsum crap</p>
+		<div class="col-md-12 col-sm-12 col-xs-12" id="item">
+		<h3 class="text-center">Sushi</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
+</div>
+</div>
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
